--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,7 +35,7 @@
         <% if(locals.isLogged) { %>
           <li><a href="/listado">Contacto</a></li>
           <li class="current-menu-item"><a href="/misejercicios">Mis ejercicios</a></li>
-          <li><a href="/users/miperfil">¡Hola <b><%= locals.userLogged.name %></b>!</a>
+          <li><a href="/users/miperfil">¡Hola <b><%= locals.userLogged.name %>!</b></a>
                 </ul>
               </li>
           </li>
@@ -67,7 +67,7 @@
           </div>
           </div>
 
-          <div class="buttonBanner"><a href="/registro"><button>Continuar</button></a></div>
+          <div class="buttonBanner"><a href="/users/registro"><button>Continuar</button></a></div>
       
             <!--Estrellas--> 
 
