Se termino organizador de tareas, se agrego favicon

--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -4,7 +4,7 @@ html, body{
 }
 
 .main{
-background: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1648519753/Por%20Ti/fondo_registro_s5hqja.png) no-repeat center center;
+background: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655491397/Por%20Ti/fondo_login_gk172y.png) no-repeat center center;
 background-size: cover;
 }
 
