--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis ejercicios
     </title>
+
+      <!--FAVICON--> 
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      
       <!--CSS--> 
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
       <link rel="stylesheet" href="/css/ejercicios.css" type="text/css">
@@ -74,17 +78,17 @@
         <main>
         <div class="ejercicios-top-contenedor">
 
-            <div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
+          <a href="https://por-ti-recetas.herokuapp.com/"><div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
                 <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503255/Por%20Ti/ejercicios-card1_bqpyfa.svg" style="width: 100%">
-            </div>
+            </div></a>
 
-           <a href="/miperfil"><div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
+           <a href="/users/miperfil"><div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
                 <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503349/Por%20Ti/ejercicios-card2_kmad1t.svg" style="width: 100%">
             </div></a> 
             
-            <div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
+            <a href="/ejercicios/organizador-de-tareas"><div class="ejercicios-top-contenedor-hijo" style="display:flex; justify-content:baseline; color: white;">
                 <img src="https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503354/Por%20Ti/ejercicios-card3_e1yx4t.svg" style="width: 100%">
-            </div>
+            </div></a> 
 
         </div>
 
@@ -153,6 +157,10 @@
               <h2>Actividades en compañia</h2><h6>12 min</h6>
               <div class="h4-card-text"><h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></div>
            
+              <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);"><div class="card-ejercicio-text">
+                <h2>Técnicas de respiración</h2><h6>12 min</h6>
+                <div class="h4-card-text"><h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></div>
+             
     </div>
   </div>
 </div>
