--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio
     </title>
+
+      <!--FAVICON--> 
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      
       <!--CSS--> 
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
       <link rel="stylesheet" href="/css/home.css" type="text/css">
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
       <link rel="stylesheet" href="/css/fondo.css" type="text/css">
+      <link rel="stylesheet" href="/css/footer.css" type="text/css">
   
       <!--Tipografías--> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -184,3 +190,4 @@
        </div>
 </body>
 </html>
+
