--- a/src/views/objetivos.ejs
+++ b/src/views/objetivos.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis objetivos</title>
 
+      <!--FAVICON--> 
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      
     <!--CSS--> 
     <link rel="stylesheet" href="/css/objetivos.css" type="text/css">
     <link rel="stylesheet" href="/css/navbar.css" type="text/css">
