--- a/src/views/5sentidos.ejs
+++ b/src/views/5sentidos.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
 
+    <!--FAVICON--> 
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    
     <!--CSS--> 
     <link rel="stylesheet" type="text/css" href="/css/login.css">
     <link rel="stylesheet" href="/css/navbar.css" type="text/css">
