--- a/src/views/ejerciciosfavoritos404.ejs
+++ b/src/views/ejerciciosfavoritos404.ejs
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios favoritos</title>
+
+      <!--FAVICON--> 
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      
       <!--CSS--> 
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
       <link rel="stylesheet" href="/css/ejercicios.css" type="text/css">
