--- a/src/views/organizador1.ejs
+++ b/src/views/organizador1.ejs
@@ -1,10 +1,61 @@
+<!DOCTYPE html>
+<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">  
+    <title>Organizador de tareas</title>
+
+      <!--FAVICON--> 
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+          <!--CSS--> 
+    <link rel="stylesheet" href="/css/organizador2.css">
+    <link rel="stylesheet" href="/css/navbar.css" type="text/css">
+    <link rel="stylesheet" href="/css/objetivos.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Iconscout Link For Icons -->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  </head>
+
+  <%- include('./partials/nav') %>
+
+  <body>
+
+    <div class="titles">
+        <h1>Organizador de tareas</h1>
+        <h3>Escribe las tareas que tengas pendientes por completar hoy.</h3>
+    </div>
+
+    <div class="wrapper">
+      <div class="task-input">
+        <img class="bars" src="/img/bars.svg" alt="icon">
+        <input type="text" placeholder="Escribe una tarea nueva">
+      </div>
+      <div class="controls">
+        <div class="filters">
+          <span class="active" id="all">Todas</span>
+          <span id="pending">Pendientes</span>
+          <span id="completed">Completadas</span>
+        </div>
+        <button class="clear-btn">Borrar todo</button>
+      </div>
+      <ul class="task-box"></ul>
+    </div>
+
+    <div class="back">
+        <a href="/misejercicios"><button>Volver</button></a>
+    </div>
+
+    <script>
 const taskInput = document.querySelector(".task-input input"),
 filters = document.querySelectorAll(".filters span"),
 clearAll = document.querySelector(".clear-btn"),
 taskBox = document.querySelector(".task-box");
+
 let editId,
 isEditTask = false,
 todos = JSON.parse(localStorage.getItem("todo-list"));
+
 filters.forEach(btn => {
     btn.addEventListener("click", () => {
         document.querySelector("span.active").classList.remove("active");
@@ -12,6 +63,7 @@ filters.forEach(btn => {
         showTodo(btn.id);
     });
 });
+
 function showTodo(filter) {
     let liTag = "";
     if(todos) {
@@ -26,20 +78,21 @@ function showTodo(filter) {
                             <div class="settings">
                                 <i onclick="showMenu(this)" class="uil uil-ellipsis-h"></i>
                                 <ul class="task-menu">
-                                    <li onclick='editTask(${id}, "${todo.name}")'><i class="uil uil-pen"></i>Edit</li>
-                                    <li onclick='deleteTask(${id}, "${filter}")'><i class="uil uil-trash"></i>Delete</li>
+                                    <li onclick='editTask(${id}, "${todo.name}")'><i class="uil uil-pen"></i>Editar</li>
+                                    <li onclick='deleteTask(${id}, "${filter}")'><i class="uil uil-trash"></i>Borrar</li>
                                 </ul>
                             </div>
                         </li>`;
             }
         });
     }
-    taskBox.innerHTML = liTag || `<span>You don't have any task here</span>`;
+    taskBox.innerHTML = liTag || `<span>Aún no has agregado tareas</span>`;
     let checkTask = taskBox.querySelectorAll(".task");
     !checkTask.length ? clearAll.classList.remove("active") : clearAll.classList.add("active");
     taskBox.offsetHeight >= 300 ? taskBox.classList.add("overflow") : taskBox.classList.remove("overflow");
 }
 showTodo("all");
+
 function showMenu(selectedTask) {
     let menuDiv = selectedTask.parentElement.lastElementChild;
     menuDiv.classList.add("show");
@@ -49,6 +102,7 @@ function showMenu(selectedTask) {
         }
     });
 }
+
 function updateStatus(selectedTask) {
     let taskName = selectedTask.parentElement.lastElementChild;
     if(selectedTask.checked) {
@@ -60,6 +114,7 @@ function updateStatus(selectedTask) {
     }
     localStorage.setItem("todo-list", JSON.stringify(todos))
 }
+
 function editTask(taskId, textName) {
     editId = taskId;
     isEditTask = true;
@@ -67,18 +122,21 @@ function editTask(taskId, textName) {
     taskInput.focus();
     taskInput.classList.add("active");
 }
+
 function deleteTask(deleteId, filter) {
     isEditTask = false;
     todos.splice(deleteId, 1);
     localStorage.setItem("todo-list", JSON.stringify(todos));
     showTodo(filter);
 }
+
 clearAll.addEventListener("click", () => {
     isEditTask = false;
     todos.splice(0, todos.length);
     localStorage.setItem("todo-list", JSON.stringify(todos));
     showTodo()
 });
+
 taskInput.addEventListener("keyup", e => {
     let userTask = taskInput.value.trim();
     if(e.key == "Enter" && userTask) {
@@ -95,3 +153,8 @@ taskInput.addEventListener("keyup", e => {
         showTodo(document.querySelector("span.active").id);
     }
 });
+    </script>
+
+  </body>
+
+</html>
