--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi perfil</title>
 
+      <!--FAVICON--> 
+      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      
       <!--CSS--> 
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
       <link rel="stylesheet" href="/css/perfil.css" type="text/css">
@@ -75,7 +78,6 @@
   <div class="espacio" style="padding: 50px"></div>
   <div class="espacio" style="padding: 50px"></div>
 </div>
-
     <div class="container-fluid">
         <div class="col-xs-6">
           <div class="row">
@@ -102,10 +104,10 @@
               </ul>
           </div>
         </div>
-        <div class="a-session"><a href="/users/logout">Cerrar sesión</a></div>
       </div>
-      
+      <div class="buttonBanner"><a href="/users/logout"><button>Cerrar sesión</button></a></div>
+      <div class="espacio" style="padding: 50px"></div>
+      <div class="espacio" style="padding: 50px"></div>
 </body>
 </main>
 </html>
-
