Se elimino estado de UsersController

--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -8,7 +8,7 @@
     </title>
 
       <!--FAVICON--> 
-      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      <link rel="shortcut icon" type="image/png" href="//img/favicon.png">
       
       <!--CSS--> 
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
@@ -157,10 +157,10 @@
               <h2>Actividades en compañia</h2><h6>12 min</h6>
               <div class="h4-card-text"><h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></div>
            
-              <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);"><div class="card-ejercicio-text">
+              <a href="/ejercicios/respiracion"> <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);"><div class="card-ejercicio-text">
                 <h2>Técnicas de respiración</h2><h6>12 min</h6>
                 <div class="h4-card-text"><h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></div>
-             
+              </a>
     </div>
   </div>
 </div>
@@ -170,9 +170,9 @@
 
   <div class="ejercicios-box-cont" style="margin-top: 50px; padding-left: 75px;">
     
-    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/sentidos-card_fjbkx6.svg); width:373px;"><div class="card-ejercicio-text">
+    <a href="/ejercicios/5sentidos"><div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/sentidos-card_fjbkx6.svg); width:373px;"><div class="card-ejercicio-text">
       <h2>Técnica de los 5 sentidos</h2><h6>12 min</h6>
-  <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+  <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></a>
     <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
         <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
     <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503371/Por%20Ti/ejercicios-card7_qguw8x.svg);"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
