--- a/src/views/organizador1.ejs
+++ b/src/views/organizador1.ejs
@@ -6,7 +6,7 @@
     <title>Organizador de tareas</title>
 
       <!--FAVICON--> 
-      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
 
           <!--CSS--> 
     <link rel="stylesheet" href="/css/organizador2.css">
