--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -7,7 +7,7 @@
     <title>Registro</title>
 
     <!--FAVICON--> 
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
 
     <!--CSS--> 
     <link rel="stylesheet" type="text/css" href="/css/login.css">
@@ -24,7 +24,7 @@
 </head>
 <header>
     <!--FAVICON--> 
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
 </header>
 <body>
     <div class="fondo">
