--- a/src/views/5sentidos.ejs
+++ b/src/views/5sentidos.ejs
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>5 sentidos</title>
 
-    <!--FAVICON--> 
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-    
+      <!--FAVICON--> 
+      <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
+
     <!--CSS--> 
-    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet/less" type="text/css" href="5sentidos.less" />
+    <script src="5sentidos.js" type="text/javascript"></script>
+
+    <link rel="" href="/css/5sentidos.scss">
     <link rel="stylesheet" href="/css/navbar.css" type="text/css">
 
     <!--Tipografías--> 
@@ -31,60 +34,228 @@
       
     <%- include('./partials/nav') %>
 
-          <form action="/login" method="GET" class="main" style="padding-bottom: 400px">
-            <!--Prueba-->
-            <div class="login-box" id="register-box">
-                <div class="titles">
-                    <h1>5-4-3-2-1 sentidos</h1>
-                        <h4>Es una técnica auto-calmante para aliviar la ansiedad, consiste en utilizar los cinco sentidos para tomar conciencia del cuerpo.</h4>
-                    </div>
-                <form>
-
-                    <h3>1. Vista. Mira a tu alrededor y piensa en cinco cosas que observes. No te detengas en elegir, sólo nómbralas. 2. Oído. Identifica cuatro sonidos que puedas escuchar. 3. Tacto. Encuentra tres cosas que puedas sentir. 4. Olfato. Aunque éste es el más complicado, sólo necesitas hallar dos olores. Puede ser alguna comida o fragancia.</h3>
-                    <div class="user-box">
-                        <input type="text" name="name" required="" id="name">
-                        <label for="name">Nombre</label>
-                      </div>
-
-                      <div class="user-box">
-                        <input type="text" name="last_name" required="" id="last_name">
-                        <label for="name">Apellido</label>
-                      </div>
-
-                  <div class="user-box">
-                    <input type="text" name="email" required="" id="email">
-                    <label for="email">Correo electrónico</label>
-                  </div>
-
-                  <div class="user-box">
-                    <input type="password" name="email" required="" id="password">
-                    <label for="password">Contraseña</label>
-                  </div>
-
-                  <div class="user-box">
-                    <input type="password" name="confirm_password" required="" id="confirm_password">
-                    <label for="confirm_password">Confirmar contraseña</label>
-                  </div>
-                <button style="text-align:center; left: 30%; right: 30%; position: absolute">Terminar</button> 
-                <br>
-                <br>
-               
-            <!--[if mso]>&nbsp;<![endif]-->
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-      
-                </form>
-              </div>
-          </form>
-          <!--Prueba-->
-
-          </div>
-          <!--Finaliza prueba-->
+       
+            
+              <!-- Multi step form --> 
+<section class="multi_step_form">  
+  <form id="msform"> 
+    <!-- Tittle -->
+    <div class="tittle">
+      <h2>5-4-3-2-1 sentidos</h2>
+      <p>Es una técnica auto-calmante para aliviar la ansiedad, </p>
+      <p>consiste en utilizar los cinco sentidos para tomar conciencia del cuerpo.</p>
+    </div>
+    <!-- progressbar -->
+    <ul id="progressbar">
+      <li class="active">Vista</li> 
+      <li>Oído</li> 
+      <li>Olfato</li>
+       <li>Tacto</li>
+      <li>Sabor</li>
+    </ul>
+    <!-- fieldsets -->
+    <fieldset>
+      <h3>Mira a tu alrededor y piensa en cinco cosas que observes.</h3>
+      <h6> No te detengas en elegir, sólo nómbralas.</h6> 
+      <div class="form-row"> 
+        
+        <div class="form-group col-md-6"> 
+          <input type="text" class="form-control" placeholder="1.">
+          </div> 
+          
+           <div class="form-group col-md-6"> 
+          <input type="text" class="form-control" placeholder="2.">
+             </div> 
+             
+              <div class="form-group col-md-6"> 
+          <input type="text" class="form-control" placeholder="3.">
+                </div> 
+                
+                 <div class="form-group col-md-6"> 
+          <input type="text" class="form-control" placeholder="4.">
+                    </div> 
+                   
+                    <div class="form-group col-md-6"> 
+          <input type="text" class="form-control" placeholder="5.">
+        </div> 
+                   
+      </div> 
+      <br>
+      <button type="button" class="action-button previous_button">Back</button>
+      <button type="button" class="next action-button">Continue</button>  
+    </fieldset>
+    <fieldset>
+      <h3>Verify Your Identity</h3>
+      <h6>Please upload any of these documents to verify your Identity.</h6>
+      <div class="passport">
+        <h4>Govt. ID card <br>PassPort <br>Driving License.</h4> 
+        <a href="#" class="don_icon"><i class="ion-android-done"></i></a> 
       </div>
+      <div class="input-group"> 
+        <div class="custom-file">
+          <input type="file" class="custom-file-input" id="upload">
+          <label class="custom-file-label" for="upload"><i class="ion-android-cloud-outline"></i>Choose file</label>
+        </div>
+      </div>
+      <ul class="file_added">
+        <li>File Added:</li>
+        <li><a href="#"><i class="ion-paperclip"></i>national_id_card.png</a></li>
+        <li><a href="#"><i class="ion-paperclip"></i>national_id_card_back.png</a></li>
+      </ul>
+      <button type="button" class="action-button previous previous_button">Back</button>
+      <button type="button" class="next action-button">Continue</button>  
+    </fieldset>  
+    <fieldset>
+      <h3>Create Security Questions</h3>
+      <h6>Please update your account with security questions</h6> 
+      <div class="form-group"> 
+        <select class="product_select">
+          <option data-display="1. Choose A Question">1. Choose A Question</option> 
+          <option>2. Choose A Question</option>
+          <option>3. Choose A Question</option> 
+        </select>
+      </div> 
+      <div class="form-group fg_2"> 
+        <input type="text" class="form-control" placeholder="Anwser here:">
+      </div> 
+      <div class="form-group"> 
+        <select class="product_select">
+          <option data-display="1. Choose A Question">1. Choose A Question</option> 
+          <option>2. Choose A Question</option>
+          <option>3. Choose A Question</option> 
+        </select>
+      </div> 
+      <div class="form-group fg_3"> 
+        <input type="text" class="form-control" placeholder="Anwser here:">
+      </div> 
+      <button type="button" class="action-button previous previous_button">Back</button> 
+      <a href="#" class="action-button">Finish</a> 
+    </fieldset>  
+  </form>  
+</section> 
+
+<!-- End Multi step form -->   
+<script>
+  ;(function($) {
+    "use strict";  
+    
+    //* Form js
+    function verificationForm(){
+        //jQuery time
+        var current_fs, next_fs, previous_fs; //fieldsets
+        var left, opacity, scale; //fieldset properties which we will animate
+        var animating; //flag to prevent quick multi-click glitches
+
+        $(".next").click(function () {
+            if (animating) return false;
+            animating = true;
+
+            current_fs = $(this).parent();
+            next_fs = $(this).parent().next();
+
+            //activate next step on progressbar using the index of next_fs
+            $("#progressbar li").eq($("fieldset").index(next_fs)).addClass("active");
+
+            //show the next fieldset
+            next_fs.show();
+            //hide the current fieldset with style
+            current_fs.animate({
+                opacity: 0
+            }, {
+                step: function (now, mx) {
+                    //as the opacity of current_fs reduces to 0 - stored in "now"
+                    //1. scale current_fs down to 80%
+                    scale = 1 - (1 - now) * 0.2;
+                    //2. bring next_fs from the right(50%)
+                    left = (now * 50) + "%";
+                    //3. increase opacity of next_fs to 1 as it moves in
+                    opacity = 1 - now;
+                    current_fs.css({
+                        'transform': 'scale(' + scale + ')',
+                        'position': 'absolute'
+                    });
+                    next_fs.css({
+                        'left': left,
+                        'opacity': opacity
+                    });
+                },
+                duration: 800,
+                complete: function () {
+                    current_fs.hide();
+                    animating = false;
+                },
+                //this comes from the custom easing plugin
+                easing: 'easeInOutBack'
+            });
+        });
+
+        $(".previous").click(function () {
+            if (animating) return false;
+            animating = true;
+
+            current_fs = $(this).parent();
+            previous_fs = $(this).parent().prev();
+
+            //de-activate current step on progressbar
+            $("#progressbar li").eq($("fieldset").index(current_fs)).removeClass("active");
+
+            //show the previous fieldset
+            previous_fs.show();
+            //hide the current fieldset with style
+            current_fs.animate({
+                opacity: 0
+            }, {
+                step: function (now, mx) {
+                    //as the opacity of current_fs reduces to 0 - stored in "now"
+                    //1. scale previous_fs from 80% to 100%
+                    scale = 0.8 + (1 - now) * 0.2;
+                    //2. take current_fs to the right(50%) - from 0%
+                    left = ((1 - now) * 50) + "%";
+                    //3. increase opacity of previous_fs to 1 as it moves in
+                    opacity = 1 - now;
+                    current_fs.css({
+                        'left': left
+                    });
+                    previous_fs.css({
+                        'transform': 'scale(' + scale + ')',
+                        'opacity': opacity
+                    });
+                },
+                duration: 800,
+                complete: function () {
+                    current_fs.hide();
+                    animating = false;
+                },
+                //this comes from the custom easing plugin
+                easing: 'easeInOutBack'
+            });
+        });
+
+        $(".submit").click(function () {
+            return false;
+        })
+    }; 
+    
+    //* Add Phone no select
+    function phoneNoselect(){
+        if ( $('#msform').length ){   
+            $("#phone").intlTelInput(); 
+            $("#phone").intlTelInput("setNumber", "+880"); 
+        };
+    }; 
+    //* Select js
+    function nice_Select(){
+        if ( $('.product_select').length ){ 
+            $('select').niceSelect();
+        };
+    }; 
+    /*Function Calls*/  
+    verificationForm ();
+    phoneNoselect ();
+    nice_Select ();
+})(jQuery); 
+</script>
+
 </body>
   <!-- Site footer -->
   <footer class="site-footer">
