--- a/src/views/ejerciciosrecientes404.ejs
+++ b/src/views/ejerciciosrecientes404.ejs
@@ -7,7 +7,7 @@
     <title>Ejercicios favoritos</title>
 
       <!--FAVICON--> 
-      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
       
       <!--CSS--> 
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
