--- a/src/views/listado.ejs
+++ b/src/views/listado.ejs
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Ejercicios</title>
 
       <!--FAVICON--> 
-      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      <link rel="shortcut icon" type="image/png" href="//img/favicon.png">
       
      <!--CSS--> 
      <link rel="stylesheet" href="/css/navbar.css" type="text/css">
