--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,7 +7,7 @@
     <title>Iniciar sesión</title>
 
       <!--FAVICON--> 
-      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
       
     <!--CSS--> 
     <link rel="stylesheet" type="text/css" href="/css/login.css">
