--- a/src/views/objetivos.ejs
+++ b/src/views/objetivos.ejs
@@ -7,7 +7,7 @@
     <title>Mis objetivos</title>
 
       <!--FAVICON--> 
-      <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+      <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
       
     <!--CSS--> 
     <link rel="stylesheet" href="/css/objetivos.css" type="text/css">
