--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -8,7 +8,7 @@
     </title>
 
       <!--FAVICON--> 
-      <link rel="shortcut icon" type="image/png" href="//img/favicon.png">
+      <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
       
       <!--CSS--> 
       <link rel="stylesheet" href="/css/navbar.css" type="text/css">
@@ -97,46 +97,52 @@
 
       <!--Código ejercicios-->
       <h2 style="margin-top: 100px;">Mis ejercicios</h2>
+      <h3 style="margin-top: 25px;">Desliza la pantalla a la izquierda para ver más ejercicios.</h2>
 
       <div class="ejercicios-box-cont" style="margin-top: 50px; padding-left: 75px;">
 
+        <a href="/ejercicios/registro-de-ansiedad"> <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/registro-ansiedad-card_bpsazv.svg);"><div class="card-ejercicio-text">
+          <h2>Hoja de registro de ansiedad</h2><h6>12 min</h6>
+          <h4>Visualiza los momentos en que sientes ansiedad.</h4></div></div></a>
+     
+          <a href="/ejercicios/respiracion"> <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);"><div class="card-ejercicio-text">
+            <h2>Técnicas de respiración</h2><h6>12 min</h6>
+            <div class="h4-card-text"><h4>Reduce el estrés y ansiedad usando la respiración</h4></div></div></div>
+          </a>
+
     <div class="box"><div class="card-ejercicio-text">
       <h2>Tapping</h2><h6>12 min</h6>
-        <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+        <h4>Técnica auto-calmante para armonizar emociones.</h4></div></div>
       
         <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg);">
           <div class="card-ejercicio-heart">
             <i class="fa-light fa-heart"></i>
           </div>
+
           <div class="card-ejercicio-text">
           <h2>Arteterapia</h2><h6>12 min</h6>
-        <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+        <h4>Conecta con tus emociones a través del arte.</h4></div></div>
       
         <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019618/Por%20Ti/Imaginacio%CC%81n_guiadaejercicios_oe6tbo.png); width:373px;"><div class="card-ejercicio-text">
           <h2>Imaginación guiada</h2><h6>12 min</h6>
-          <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+          <h4>Visualiza para redirigir tus pensamientos.</h4></div></div>
           
           <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019619/Por%20Ti/Plato_del_buen_comerejercicios_bkege6.png);"><div class="card-ejercicio-text">
             <h2>Plato del buen comer</h2><h6>12 min</h6>
-            <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+            <h4>Guía tu alimentación para obtener salud.</h4></div></div>
     
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019619/Por%20Ti/Relajacio%CC%81n_musculaejercicios_gvsvcs.png);"><div class="card-ejercicio-text">
               <h2>Relajación muscular</h2><h6>12 min</h6>
-              <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+              <h4>Reduce la tensión corporal. </h4></div></div>
 
       <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189738/Por%20Ti/sueno-card_hpgpud.svg);"><div class="card-ejercicio-text"><h2>Registro de sueño</h2><h6>12 min</h6>
-        <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+        <h4>Monitorea tus horas de sueño.</h4></div></div>
         
         <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/actividades-del-dia-card_jk8qu2.svg);"><div class="card-ejercicio-text"><h2>Listado de actividades del día</h2><h6>12 min</h6>
           <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
   
           <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/diario-emocional-card_ilqhnt.svg);"><div class="card-ejercicio-text"><h2>Diario emocional</h2><h6>12 min</h6>
             <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
-
-            <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/registro-ansiedad-card_bpsazv.svg);"><div class="card-ejercicio-text">
-              <h2>Hoja de registro de ansiedad</h2><h6>12 min</h6>
-              <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
-         
 
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866646/Por%20Ti/card-actividad-fi%CC%81sica-ejercicio_tzsxxx.png);"><div class="card-ejercicio-text">
               <h2>Registro de actividad física</h2><h6>12 min</h6>
@@ -157,10 +163,6 @@
               <h2>Actividades en compañia</h2><h6>12 min</h6>
               <div class="h4-card-text"><h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></div>
            
-              <a href="/ejercicios/respiracion"> <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);"><div class="card-ejercicio-text">
-                <h2>Técnicas de respiración</h2><h6>12 min</h6>
-                <div class="h4-card-text"><h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></div>
-              </a>
     </div>
   </div>
 </div>
