--- a/src/views/5sentidos.ejs
+++ b/src/views/5sentidos.ejs
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5 sentidos</title>
-
-      <!--FAVICON--> 
+    <script src="js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  
+    <!--FAVICON--> 
       <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
 
     <!--CSS--> 
     <link rel="stylesheet/less" type="text/css" href="5sentidos.less" />
     <script src="5sentidos.js" type="text/javascript"></script>
 
-    <link rel="" href="/css/5sentidos.scss">
+    <link rel="stylesheet" href="/css/5sentidos.css">
     <link rel="stylesheet" href="/css/navbar.css" type="text/css">
 
     <!--Tipografías--> 
