--- a/src/views/5sentidos2.ejs
+++ b/src/views/5sentidos2.ejs
@@ -150,9 +150,11 @@
                 </form>
             </div>
             <div class="back">
-                <a href="/misejercicios"><button>Volver a ejercicios</button></a>
+                <a href="/misejercicios"><button>Volver</button></a>
             </div>
         </div>
+
+      
 
         <script>
 initMultiStepForm();
@@ -240,7 +242,7 @@ function initMultiStepForm() {
 }
 
         </script>
+          
     </body>
-
     <br>
 </html>
