--- a/src/views/ansiedad_.ejs
+++ b/src/views/ansiedad_.ejs
@@ -42,7 +42,7 @@
            <!-- <p>Además si se lleva un proceso de terapia, es una gran herramienta de apoyo para dar seguimiento del tratamiento proporcionado por el terapeuta. -->
             <br>
             <br>
-            <p>Te compartimos un archivo descargable que podrás utilizar.</p>
+            <p>Te compartimos dos archivos descargables que podrás utilizar.</p>
             </div>
           <br>
         
