--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -107,61 +107,74 @@
      
           <a href="/ejercicios/respiracion"> <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655489715/Por%20Ti/Ejercicio-fondo-respiracion2_qnjx2i.png);"><div class="card-ejercicio-text">
             <h2>Técnicas de respiración</h2><h6>12 min</h6>
-            <div class="h4-card-text"><h4>Reduce el estrés y ansiedad usando la respiración</h4></div></div></div>
+            <div class="h4-card-text"><h4>Reduce el estrés y ansiedad usando la respiración.</h4></div></div></div>
           </a>
 
-    <div class="box"><div class="card-ejercicio-text">
+          <a href="/ejercicios/tapping"><div class="box"><div class="card-ejercicio-text">
       <h2>Tapping</h2><h6>12 min</h6>
         <h4>Técnica auto-calmante para armonizar emociones.</h4></div></div>
-      
+      </a>
+
         <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg);">
           <div class="card-ejercicio-heart">
             <i class="fa-light fa-heart"></i>
           </div>
 
-          <div class="card-ejercicio-text">
+          <a href="/ejercicios/arteterapia"><div class="card-ejercicio-text">
           <h2>Arteterapia</h2><h6>12 min</h6>
         <h4>Conecta con tus emociones a través del arte.</h4></div></div>
-      
+      </a>
+
+      <a href="/ejercicios/imaginacion-guiada">
         <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019618/Por%20Ti/Imaginacio%CC%81n_guiadaejercicios_oe6tbo.png); width:373px;"><div class="card-ejercicio-text">
           <h2>Imaginación guiada</h2><h6>12 min</h6>
           <h4>Visualiza para redirigir tus pensamientos.</h4></div></div>
-          
+        </a>
+
+        <a href="/ejercicios/plato-del-buen-comer">
           <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019619/Por%20Ti/Plato_del_buen_comerejercicios_bkege6.png);"><div class="card-ejercicio-text">
             <h2>Plato del buen comer</h2><h6>12 min</h6>
             <h4>Guía tu alimentación para obtener salud.</h4></div></div>
-    
+          </a>
+
+          <a href="/ejercicios/relajacion-muscular">
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019619/Por%20Ti/Relajacio%CC%81n_musculaejercicios_gvsvcs.png);"><div class="card-ejercicio-text">
               <h2>Relajación muscular</h2><h6>12 min</h6>
               <h4>Reduce la tensión corporal. </h4></div></div>
+            </a>
 
-      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189738/Por%20Ti/sueno-card_hpgpud.svg);"><div class="card-ejercicio-text"><h2>Registro de sueño</h2><h6>12 min</h6>
+      <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189738/Por%20Ti/sueno-card_hpgpud.svg);"><div class="card-ejercicio-text">
+        <h2>Registro de sueño</h2><h6>12 min</h6>
         <h4>Monitorea tus horas de sueño.</h4></div></div>
         
-        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/actividades-del-dia-card_jk8qu2.svg);"><div class="card-ejercicio-text"><h2>Listado de actividades del día</h2><h6>12 min</h6>
-          <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/actividades-del-dia-card_jk8qu2.svg);"><div class="card-ejercicio-text">
+          <h2>Listado de actividades del día</h2><h6>12 min</h6>
+          <h4>Organiza tus actividades y reduce el estrés.</h4></div></div>
   
-          <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/diario-emocional-card_ilqhnt.svg);"><div class="card-ejercicio-text"><h2>Diario emocional</h2><h6>12 min</h6>
-            <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+          <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/diario-emocional-card_ilqhnt.svg);"><div class="card-ejercicio-text">
+            <h2>Diario emocional</h2><h6>12 min</h6>
+            <h4>Lleva un registro de tus emociones.</h4></div></div>
 
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866646/Por%20Ti/card-actividad-fi%CC%81sica-ejercicio_tzsxxx.png);"><div class="card-ejercicio-text">
               <h2>Registro de actividad física</h2><h6>12 min</h6>
-              <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+              <h4>Dale un seguimiento a tu entrenamiento.</h4></div></div>
             
 
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866647/Por%20Ti/card-agua-ejercicio_pyiz9v.png);"><div class="card-ejercicio-text">
               <h2>Registro de agua del día</h2><h6>12 min</h6>
-              <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
-           
+              <h4>Recupera el hábito saludable de beber agua.</h4>
+              <h4>Acelera tu metabolismo.</h4></div></div>
+         
 
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866646/Por%20Ti/card-yoga-ejercicio_aiuzqz.png);"><div class="card-ejercicio-text">
               <h2>Clases de yoga</h2><h6>12 min</h6>
-              <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+              <h4>Libera hormonas del bienestar.</h4></div></div>
            
 
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866646/Por%20Ti/card-company-ejercicio_qipewp.png);"><div class="card-ejercicio-text">
               <h2>Actividades en compañia</h2><h6>12 min</h6>
-              <div class="h4-card-text"><h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></div>
+              <div class="h4-card-text"><h4>Mantén buenos hábitos sociales.</h4>
+              <h4>Conecta con los demás.</h4></div></div></div>
            
     </div>
   </div>
@@ -174,11 +187,14 @@
     
     <a href="/ejercicios/5sentidos"><div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651189737/Por%20Ti/sentidos-card_fjbkx6.svg); width:373px;"><div class="card-ejercicio-text">
       <h2>Técnica de los 5 sentidos</h2><h6>12 min</h6>
-  <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div></a>
-    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
-        <h4>Lorem ipsum dolor sit amet consectetur</h4></div></div>
+  <h4>Técnica auto-calmante para aliviar la ansiedad.</h4></div></div></a>
+   
+  <a href="/ejercicios/arteterapia">
+  <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
+        <h4>Expresa tus emociones con arte.</h4></div></div></a>
+        
     <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503371/Por%20Ti/ejercicios-card7_qguw8x.svg);"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
-        <h4>Lorem ipsum dolor sit amet consectetur</h4></div>
+        <h4>Técnica auto-calmante para armonizar emociones.</h4></div>
     </div>
     
 </div>
