--- a/src/public/css/ansiedad.css
+++ b/src/public/css/ansiedad.css
@@ -74,4 +74,5 @@ embed{
         background-color: rgb(254, 223, 200);
         color: rgb(65, 64, 105);
         text-align: center;
+        cursor: pointer;
      }
