--- a/src/public/css/arteterapia.css
+++ b/src/public/css/arteterapia.css
@@ -161,6 +161,7 @@ p
           color: rgb(65, 64, 105);
           text-align: center;
           margin-bottom: 40px;
+          cursor: pointer;
        }
 
  
