--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -163,7 +163,7 @@
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866647/Por%20Ti/card-agua-ejercicio_pyiz9v.png);"><div class="card-ejercicio-text">
               <h2>Registro de agua del día</h2><h6>12 min</h6>
               <h4>Recupera el hábito saludable de beber agua.</h4>
-              <h4>Acelera tu metabolismo.</h4></div></div>
+              </div></div>
          
 
             <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651866646/Por%20Ti/card-yoga-ejercicio_aiuzqz.png);"><div class="card-ejercicio-text">
