--- a/src/public/css/5sentidos2.css
+++ b/src/public/css/5sentidos2.css
@@ -18,8 +18,10 @@
 body {
     display: flex;
     align-items: center;
+    text-align: center;
+    margin: auto;
     justify-content: center;
-    min-height: 100vh;
+    min-height: 60vh;
     overflow-x: hidden;
     background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1655491397/Por%20Ti/fondo_login_gk172y.png);
     background-size: cover;
@@ -32,13 +34,15 @@ body {
     width: var(--containerWidth);
     background: #fff;
     text-align: center;
-    border-radius: 5px;
-    padding: 50px 35px 10px 35px;
+    margin: auto;
+    border-radius: 30px;
+    margin-top: 50px;
+    padding: 25px 35px 10px 35px;
 }
 .container header {
     font-size: 35px;
     font-weight: 600;
-    margin: 0 0 30px 0;
+    margin: 0 0 35px 0;
 }
 .container .form-outer {
     width: 100%;
@@ -74,7 +78,7 @@ form .page .field input {
     height: 100%;
     width: 100%;
     border: 1px solid var(--inputBorderColor);
-    border-radius: 5px;
+    border-radius: 15px;
     padding-left: 15px;
     margin: 0 1px;
     font-size: 18px;
@@ -90,18 +94,18 @@ form .page .field select {
     font-weight: 500;
 }
 form .page .field button {
-    width: 100%;
+    width: 50%;
     height: calc(100% + 5px);
     border: none;
     background: var(--secondary);
     margin-top: -20px;
-    border-radius: 5px;
+    border-radius: 30px;
     color: #fff;
     cursor: pointer;
     font-size: 18px;
     font-weight: 500;
     letter-spacing: 1px;
-    text-transform: uppercase;
+    margin: auto;
     transition: 0.5s ease;
 }
 form .page .field button:hover {
@@ -109,6 +113,7 @@ form .page .field button:hover {
 }
 form .page .btns button {
     margin-top: -20px !important;
+    border-radius: 30px;
 }
 form .page .btns button.prev {
     margin-right: 3px;
@@ -246,8 +251,9 @@ margin-top: 40px;
     padding: 15px;
     width:  16em;
     background-color: rgb(254, 223, 200);
-    color: rgb(149, 148, 199);
+    color: rgb(51, 24, 95);
     text-align: center;
+    cursor: pointer;
  }
 
 @media screen and (max-width: 490px) {
@@ -258,4 +264,31 @@ margin-top: 40px;
         box-sizing: border-box;
         border-radius: 0;
     }
+}
+
+.titles{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-family: 'Poppins';
+    text-align: center;
+    padding-right: 250px;
+    padding-left: 250px;
+    align-items: center;
+}
+
+.titles h1{
+margin-top: 250px;
+margin-bottom: 50px;
+}
+
+.prev-3{
+margin: auto;
+text-align: center;
+align-self: center;
+}
+
+.back{
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
