--- a/src/views/arteterapia.ejs
+++ b/src/views/arteterapia.ejs
@@ -49,28 +49,28 @@
 <section class="hero-section">
   <div class="card-grid">
     <a class="card" href="#">
-      <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557177324-56c542165309?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)"></div>
+      <div class="card__background" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658169555/Por%20Ti/lineas_card_nemri8.png)"></div>
       <div class="card__content">
         <p class="card__category">ENOJADO</p>
         <h3 class="card__heading">Dibuja lineas</h3>
       </div>
     </a>
     <a class="card" href="#">
-      <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557187666-4fd70cf76254?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+      <div class="card__background" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658169558/Por%20Ti/arcoiris_flores_card_o8vhxe.png)"></div>
       <div class="card__content">
         <p class="card__category">TRISTE</p>
         <h3 class="card__heading">Dibuja un arcoiris y flores</h3>
       </div>
     </a>
     <a class="card" href="#">
-      <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1556680262-9990363a3e6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+      <div class="card__background" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658169558/Por%20Ti/patrones_card_ie0riv.png)"></div>
       <div class="card__content">
         <p class="card__category">TENSO</p>
         <h3 class="card__heading">Dibuja patrones</h3>
       </div>
     </li>
     <a class="card" href="#">
-      <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+      <div class="card__background" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658169555/Por%20Ti/laberinto_card_xaepif.png)"></div>
       <div class="card__content">
         <p class="card__category">NOSTÁLGICO</p>
         <h3 class="card__heading">Dibuja un laberinto</h3>
@@ -78,7 +78,7 @@
     </a>
 
     <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658169558/Por%20Ti/espirales_card_e1mttl.png)"></div>
         <div class="card__content">
           <p class="card__category">ATRAPADO</p>
           <h3 class="card__heading">Dibuja espirales</h3>
@@ -86,7 +86,7 @@
       </a>
 
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658169556/Por%20Ti/puntos_card_ludi5q.png)"></div>
         <div class="card__content">
           <p class="card__category">DISTRAIDO</p>
           <h3 class="card__heading">Dibuja puntos</h3>
@@ -94,7 +94,7 @@
       </a>
 
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658169555/Por%20Ti/paisajes_card_kmqcpm.png)"></div>
         <div class="card__content">
           <p class="card__category">APÁTICO</p>
           <h3 class="card__heading">Dibuja paisajes</h3>
@@ -102,7 +102,7 @@
       </a>
 
       <a class="card" href="#">
-        <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+        <div class="card__background" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1658169555/Por%20Ti/origami_card_jx77og.png)"></div>
         <div class="card__content">
           <p class="card__category">ANSIOSO</p>
           <h3 class="card__heading">Haz origami</h3>
