--- a/src/views/ejercicios.ejs
+++ b/src/views/ejercicios.ejs
@@ -115,16 +115,6 @@
         <h4>Técnica auto-calmante para armonizar emociones.</h4></div></div>
       </a>
 
-        <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg);">
-          <div class="card-ejercicio-heart">
-            <i class="fa-light fa-heart"></i>
-          </div>
-
-          <a href="/ejercicios/arteterapia"><div class="card-ejercicio-text">
-          <h2>Arteterapia</h2><h6>12 min</h6>
-        <h4>Conecta con tus emociones a través del arte.</h4></div></div>
-      </a>
-
       <a href="/ejercicios/imaginacion-guiada">
         <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1651019618/Por%20Ti/Imaginacio%CC%81n_guiadaejercicios_oe6tbo.png); width:373px;"><div class="card-ejercicio-text">
           <h2>Imaginación guiada</h2><h6>12 min</h6>
@@ -193,7 +183,8 @@
   <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503368/Por%20Ti/ejercicios-card6_tslgtr.svg); width: 30%;"><div class="card-ejercicio-text"><h2>Arteterapia</h2><h6>12 min</h6>
         <h4>Expresa tus emociones con arte.</h4></div></div></a>
         
-    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503371/Por%20Ti/ejercicios-card7_qguw8x.svg);"><div class="card-ejercicio-text"><h2>Tapping</h2><h6>12 min</h6>
+    <div class="box" style="background-image: url(https://res.cloudinary.com/dc7uyfv94/image/upload/v1650503371/Por%20Ti/ejercicios-card7_qguw8x.svg);"><div class="card-ejercicio-text">
+      <h2>Jin Shin Jyutsu</h2><h6>12 min</h6>
         <h4>Técnica auto-calmante para armonizar emociones.</h4></div>
     </div>
     
