--- a/src/views/respiracion.ejs
+++ b/src/views/respiracion.ejs
@@ -17,7 +17,7 @@
 
   <!--Estrellas--> 
 <body>
-    <h1 style="color:white">Respira. </h1>
+    <h1 style="color:white">Respira</h1>
     <br>
     <br>
     <main>
