--- a/src/public/css/5sentidos2.css
+++ b/src/public/css/5sentidos2.css
@@ -32,7 +32,7 @@ body {
 }
 .container {
     width: var(--containerWidth);
-    background: #fff;
+    background: rgba(240, 236, 255, 0.841);
     text-align: center;
     margin: auto;
     border-radius: 30px;
@@ -60,6 +60,7 @@ body {
     text-align: center;
     font-size: 25px;
     font-weight: 500;
+    color:rgb(51, 24, 95);
 }
 .form-outer form .page .field {
     width: var(--containerWidth);
@@ -139,17 +140,22 @@ form .page .btns button.next {
     margin-bottom: 8px;
 }
 .progress-bar .step .bullet {
-    height: 25px;
-    width: 25px;
-    border: 2px solid rgb(65, 64, 105);
+    height: 40px;
+    width: 40px;
     display: inline-block;
     border-radius: 50%;
     position: relative;
     transition: 0.2s;
     font-weight: 500;
     font-size: 17px;
-    line-height: 25px;
+    line-height: 30px;
 }
+
+.progress-bar .step .bullet img{
+    height: 40px;
+    width: 40px;
+}
+
 .progress-bar .step .bullet.active {
     border-color: var(--primary);
     background: var(--primary);
@@ -169,7 +175,7 @@ form .page .btns button.next {
     bottom: 11px;
     right: -51px;
     height: 3px;
-    width: 44px;
+    width: 45px;
     background: #262626;
 }
 .progress-bar .step .bullet.active:after {
@@ -291,4 +297,9 @@ align-self: center;
 .back{
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+#btn-vacio{
+    opacity: 0;
+    width: 20px;
 }
