--- a/src/public/css/fondo.css
+++ b/src/public/css/fondo.css
@@ -63,17 +63,11 @@ button{
 }
 
 .hoja1{
-    position: absolute;
-    bottom: 0;
-    left:0;
-    height: 300px;
+   opacity: 0;
 }
 
 .hoja2{
-    position: absolute;
-    bottom: 0px;
-    right:0;
-    height: 300px;
+    opacity: 0;
 }
 
 /* 
