--- a/src/views/5sentidos2.ejs
+++ b/src/views/5sentidos2.ejs
@@ -34,35 +34,35 @@
                 <div class="step">
                     <p>Vista</p>
                     <div class="bullet">
-                        <span>1</span>
+                        <img src="/img/vista_.svg">
                     </div>
                     <div class="check fas fa-check"></div>
                 </div>
                 <div class="step">
                     <p>Oído</p>
                     <div class="bullet">
-                        <span>2</span>
+                        <img src="/img/oido_.svg">
                     </div>
                     <div class="check fas fa-check"></div>
                 </div>
                 <div class="step">
                     <p>Tacto</p>
                     <div class="bullet">
-                        <span>3</span>
+                        <img src="/img/tacto_.svg">
                     </div>
                     <div class="check fas fa-check"></div>
                 </div>
                 <div class="step">
                     <p>Olfato</p>
                     <div class="bullet">
-                        <span>4</span>
+                        <img src="/img/olfato_.svg">
                     </div>
                     <div class="check fas fa-check"></div>
                 </div>
                 <div class="step">
                     <p>Sabor</p>
                     <div class="bullet">
-                        <span>5</span>
+                        <img src="/img/gusto_.svg">
                     </div>
                     <div class="check fas fa-check"></div>
                 </div>
@@ -150,6 +150,10 @@
                             <input type="text" placeholder="1."/>
                         </div>
                         <div class="title">¡Felicidades! Concluiste el ejercicio.</div>
+                        <div class="field btns">
+                            <button class="prev-2 prev">Anterior</button>
+                            <button class="next-2 next" style="opacity: 0; width: 1%">Siguiente</button>
+                        </div>
                     </div>
                 </form>
             </div>
